--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "babel-preset-stage-2": "^6.0.0",
     "babel-register": "^6.0.0",
     "chai": "^3.5.0",
+    "chart": "^0.1.2",
+    "chart.js": "^2.3.0",
+    "chartjs": "^0.3.24",
     "chromedriver": "^2.21.2",
     "connect-history-api-fallback": "^1.1.0",
     "cross-spawn": "^4.0.2",
@@ -56,6 +59,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.7.0",
+    "lodash": "^4.16.4",
     "lolex": "^1.4.0",
     "mocha": "^3.1.0",
     "nightwatch": "^0.9.8",
@@ -67,6 +71,7 @@
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.7",
+    "vue-chartjs": "^2.1.1",
     "vue-loader": "^9.4.0",
     "vue-style-loader": "^1.0.0",
     "vuex": "^2.0.0",
